tests/compile-fail/compile_fail__type_error__stackless__func_arg_neg_str.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: runtime temporary of non-numeric type
  ┌─ <input>:7:21
  │
7 │       textSet(0, 0, -"abc");  
  │                     ^^^^^^ temporary strings cannot be created


